Tue Apr 11 23:38:11 2006  Tim Janik  <timj@gtk.org>

	* tests/Makefile.am:
	* Makefile.am: make dist fixes, conditionalize perl rules.

Sat Apr  8 02:09:15 2006  Tim Janik  <timj@gtk.org>

	* bseloader-mad.c:
	* bseloader-wav.c: use basename instead of full file path for internal
	wave names.

Tue Apr  4 21:59:39 2006  Tim Janik  <timj@gtk.org>

	* tests/cutvorbis.c:
	* tests/magictest.c:
	* tests/mathtests.c:
	* Makefile.am: removed tools.

	* tests/testfft.c: 
	* tests/subnormals.cc: changed to make use of test macros.

Tue Apr  4 02:06:45 2006  Tim Janik  <timj@gtk.org>

	* tests/Makefile.am: build and check loophandle, got rid of testwavechunk.

Mon Apr  3 21:51:28 2006  Tim Janik  <timj@gtk.org>

	* tests/subnormals.cc: first test for correctness, then for performance.

Mon Apr  3 15:50:14 2006  Stefan Westerfeld <stefan@space.twc.de>

	* tests/subnormals.cc tests/subnormals-aux.cc: Added code which
	verifies that subnormal elimination functions are correct.

Sun Apr  2 18:19:42 2006  Tim Janik  <timj@gtk.org>

	* bse/Makefile.am: some more dependency and minor build fixes.

Sun Apr  2 03:31:24 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: merged with gslmakefile.inc. fixed dependencies. 
	simplified build rules. integrated with Makefile.decl.

	* *.hh *.cc: removed useless "mode: c++;" statement.
	fixed Bse::* functions being implemented in anonymous namespaces.

	* bsecxxmodule.cc: fixed non-static functions and static assertions.

	* bsecxxmodule.hh: assert the correct object type in the
	BSE_EFFECT_INTEGRATE_MODULE() macro via const_cast<>(this) instead
	of by using bogus namespacing.

	* bseieee754.h: work around gcc-4.2 not allowing "register" unions.

	* bseloader-guspatch.cc: fixed compiler warning.

	* gsldatahandle-mad.c:
	* bseloader-mad.c: include topconfig.h for libmad presence.

	* bsesequencer.cc: use offsetof() instead of G_STRUCT_OFFSET() which
	gcc-4.2 doesn't seem to like.

	* bsesong.c: fixed prototype scope.
