@@ -1,3 +1,9 @@
+Thu Apr 13 23:56:01 2006  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: fixed regeneration of files in srcdir.
+
+	* bseplugin.c: filter out plugins that don't end in .FPU.*.
+
 Tue Apr 11 23:38:11 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/Makefile.am:
